--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "description": "An application that converts values to other registered currencies and updates the quotes of some of these currencies daily",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "npx swagger-autogen node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest",
+    "test": "nyc --reporter=text mocha tests/integration --exit",
     "swagger-autogen": "node ./swagger.js"
   },
   "author": "Felipe Nunes",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.27.2",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "log4js": "^6.6.1",
+    "mocha": "^10.0.0",
     "mongoose": "^6.5.1",
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0",
     "swagger-autogen": "^2.21.5",
     "swagger-ui-express": "^4.5.0"
   },
