--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An application that converts values to other registered currencies and updates the quotes of some of these currencies daily",
   "main": "src/server.js",
   "scripts": {
-    "start": "npx swagger-autogen node src/server.js",
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "nyc --reporter=text mocha tests/integration --exit",
     "swagger-autogen": "node ./swagger.js"
@@ -21,7 +21,6 @@
     "mocha": "^10.0.0",
     "mongoose": "^6.5.1",
     "nyc": "^15.1.0",
-    "sinon": "^14.0.0",
     "swagger-autogen": "^2.21.5",
     "swagger-ui-express": "^4.5.0",
     "yup": "^0.32.11"
