--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,10 @@ workflows:
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-        docker:
-      - image: cimg/node:16.16
-      - node/install-packages:
+      - node/test:
+          # This is the node version to use for the `cimg/node` tag
+          # Relevant tags can be found on the CircleCI Developer Hub
+          # https://circleci.com/developer/images/image/cimg/node
+          version: '16.16.0'
           # If you are using yarn, change the line below from "npm" to "yarn"
           pkg-manager: npm
-      - run:
-          name: Run Start
-          command: npm start
